Bug 1385115 - Unbreak build on Tier3 after bug 1382883. r=cpearce

MozReview-Commit-ID: ISTOw1qfxiy

--HG--
extra : rebase_source : 4444849c190f7128d67c53483866ac59c73b2eb9